update to style

--- a/src/app/budget/page.css
+++ b/src/app/budget/page.css
@@ -168,8 +168,9 @@ body {
   font-family: Montserrat;
 }
 
-.incomeContainer:hover select {
+.incomeContainer select:hover {
   background-color: #ebfceb;
+  cursor: pointer;
 }
 
 .incomeContainer select option {
