--- a/src/app/dashboard/page.css
+++ b/src/app/dashboard/page.css
@@ -23,6 +23,7 @@ body {
   background: #fff;
   padding: 3px 9px;
   border-radius: 6px;
+  cursor: pointer;
 }
 
 .monthTitle select option {
@@ -46,6 +47,10 @@ body {
 .updateBudget > div {
   padding: 8px 16px;
   border-radius: 50px;
+  background: linear-gradient(122deg, #f0f4fe, #f7effd, #fecfdf, #fff7ee);
+}
+
+.updateBudget:hover > div {
   background: #fff;
 }
 
@@ -84,7 +89,6 @@ body {
   padding: 1.8px;
   width: fit-content;
   border-radius: 20px;
-  cursor: pointer;
 }
 
 .expenseButton.background,
@@ -92,6 +96,7 @@ body {
 .savingsButton.background {
   padding: 5px 20px;
   border-radius: 20px;
+  cursor: pointer;
 }
 
 .expenseButton.text,
@@ -102,26 +107,40 @@ body {
 }
 
 .expenseButton.border {
-  background: linear-gradient(122deg, #467af8, #9c32e2, #ff2955, #ffb15a);
+  /*background: linear-gradient(122deg, #467af8, #9c32e2, #ff2955, #ffb15a);*/
+  background-color: #fff;
 }
 
 .incomeButton.border {
-  background: #09d22f;
+  /*background: #09d22f;*/
+  background-color: #fff;
 }
 
 .savingsButton.border {
-  background: var(--orange-color);
+  /*background: var(--orange-color);*/
+  background-color: #fff;
 }
 
 .expenseButton.background {
+  background-color: #fff;
+}
+.expenseButton.background:hover {
   background: linear-gradient(122deg, #f0f4fe, #f7effd, #fecfdf, #fff7ee);
 }
 
 .incomeButton.background {
+  background-color: #fff;
+}
+
+.incomeButton.background:hover {
   background-color: #d0ffd0;
 }
 
 .savingsButton.background {
+  background-color: #fff;
+}
+
+.savingsButton.background:hover {
   background: var(--orange-highlight);
 }
 
