--- a/src/app/budget/page.css
+++ b/src/app/budget/page.css
@@ -107,6 +107,10 @@ body {
   border-radius: 20px;
 }
 
+.monthTitle select:hover {
+  cursor: pointer;
+}
+
 .saveBudgetContainer {
   background: linear-gradient(122deg, #467af8, #9c32e2, #ff2955, #ffb15a);
   padding: 1.8px;
