update button styles on budget

--- a/src/app/budget/page.css
+++ b/src/app/budget/page.css
@@ -125,6 +125,10 @@ body {
   border-radius: 20px;
 }
 
+.saveBudget:hover {
+  background: #fff;
+}
+
 .saveBudgetButton {
   font-size: 1em;
   font-weight: 800;
