adding basic state handling for recurring status

--- a/src/app/add-expense/page.css
+++ b/src/app/add-expense/page.css
@@ -154,7 +154,8 @@ span.summaryProgressBar {
   opacity: 0.25;
 }
 
-.recurringIcon:hover {
+.recurringIcon:hover,
+.recurringActive .recurringIcon {
   opacity: 1;
 }
 
