fix to usestate bug by turning off sort when edit is active

--- a/src/app/add-expense/page.css
+++ b/src/app/add-expense/page.css
@@ -17,6 +17,10 @@ main#expensePage {
   right: 8em;
 }
 
+.section:has(.recurringEdit) .filter {
+  display: none;
+}
+
 .headerWrapper {
   display: flex;
   justify-content: space-between;
