styling cache on dashboard

--- a/src/app/dashboard/page.css
+++ b/src/app/dashboard/page.css
@@ -35,6 +35,10 @@ body {
   background: linear-gradient(122deg, #f0f4fe, #f7effd, #fecfdf, #fff7ee);
 }
 
+.section .filter {
+  right: 2em;
+}
+
 .updateBudget {
   position: absolute;
   background: linear-gradient(122deg, #467af8, #9c32e2, #ff2955, #ffb15a);
