--- a/src/app/budget/page.css
+++ b/src/app/budget/page.css
@@ -1,7 +1,3 @@
-body {
-  background-color: #096012;
-}
-
 .main.budgetTop {
   min-height: auto;
   color: white;
@@ -525,6 +521,10 @@ p.addListItem:first-child {
 }
 
 /****** Section Specific Colors ******/
+
+.green-bg {
+  background-color: #30df30;
+}
 
 #Essentials,
 #Essentials .categoryRow input[type="text"] {
